# RedBuri

./: .gitignore
ros2_ws/src/base_control/: CMakeLists.txt
ros2_ws/src/base_control/config/: base_controller_node.yaml
ros2_ws/src/base_control/src/: base_controller_node.cpp
ros2_ws/src/redburi_description/: CMakeLists.txt  package.xml
ros2_ws/src/redburi_description/launch/: display.launch.py
ros2_ws/src/redburi_description/urdf/: arm.urdf.xacro
ros2_ws/src/redburi_launch/: package.xml
ros2_ws/src/redburi_launch/launch/: base_only.launch.py  controller_only.launch.py  robot_only.launch.py  teleop.launch.py  teleop_only.launch.py  teleop_sim.launch.py
ros2_ws/src/redburi_moveit/: .setup_assistant
ros2_ws/src/redburi_moveit/config/: joint_limits.yaml  redburi_arm.srdf
ros2_ws/src/redburi_moveit/launch/: demo.launch.py
ros2_ws/src/redburi_msgs/: CMakeLists.txt
ros2_ws/src/redburi_msgs/msg/: ArmMotor.msg
ros2_ws/src/serial_bridge/: CMakeLists.txt
ros2_ws/src/serial_bridge/config/: serial_bridge.yaml
ros2_ws/src/serial_bridge/src/: serial_bridge_node.cpp
ros2_ws/src/teleop/: CMakeLists.txt  package.xml
ros2_ws/src/teleop/config/: joy_arm_cartesian_node.yaml  joy_arm_joint_node.yaml  joy_base_node.yaml  moveit_arm_motor_node.yaml
ros2_ws/src/teleop/src/: joy_arm_cartesian_node.cpp  joy_arm_joint_node.cpp  joy_base_node.cpp  joy_mode_node.cpp  moveit_arm_motor_node.cpp
stm32/nucleo_f446re/: Makefile  nucleo_f446re.ioc
stm32/nucleo_f446re/Src/: tim.c  user_can_callback.cpp  user_tim_callback.cpp  user_uart_callback.cpp
(+15 files in other folders)
