<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>redburi_launch</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="149392536+keitaroi446@users.noreply.github.com">keitaro</maintainer>
  <license>TODO: License declaration</license>

  <exec_depend>joy</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>serial_bridge</exec_depend>
  <exec_depend>teleop</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
